# hexis-mcp-guard

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
hexis/: __init__.py  __main__.py  cli.py  models.py
hexis/checks/: __init__.py  auth.py  base.py  prompt_injection.py  resource_exposure.py  shell_injection.py  ssrf.py  transport.py
hexis/reporting/: __init__.py  json_report.py  sarif.py  text_report.py
hexis/scanner/: __init__.py  ai_reasoner.py  dynamic.py  static.py
hexis/spec/: __init__.py  mcp_patterns.py
tests/: __init__.py  test_checks.py  test_cli.py  test_reporting.py  test_static_scanner.py
vulnservers/: no_auth_server.py  prompt_injection_server.py  shell_injection_server.py  ssrf_server.py
