[build-system]
requires = []
build-backend = "backend"
backend-path = ["."]

[project]
name = "hexis-mcp-guard"
version = "0.1.0"
description = "Security scanner for MCP (Model Context Protocol) servers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "HEXIS Security", email = "security@hexis.dev" }]
keywords = ["mcp", "security", "scanner", "model-context-protocol", "vulnerability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
ai = ["anthropic>=0.40.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.10",
    "ruff>=0.5.0",
]

[project.scripts]
hexis = "hexis.cli:app"

[project.urls]
Homepage = "https://github.com/hexis-security/hexis-mcp-guard"
Issues = "https://github.com/hexis-security/hexis-mcp-guard/issues"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
incremental = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
